fix(api): Removed private key endpoint due to obvious reasons
